--- a/src/styles/qualtrics.css
+++ b/src/styles/qualtrics.css
@@ -5,6 +5,7 @@ body {
 	font-size: 13px;
 	font-weight: 400;
 	color: #182026;
+	margin:0px;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, Icons16, sans-serif;
 }
 
@@ -12,6 +13,17 @@ html {
 	font-size: 13px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	margin: 0;
+}
+
+.MainContent {
+	flex: 1 0 0;
+	overflow: hidden;
+}
+
+.Layout {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
 }
 
 .greyBackground {
