--- a/src/styles/qualtrics.css
+++ b/src/styles/qualtrics.css
@@ -18,6 +18,12 @@ html {
   margin: 0;
 }
 
+input::placeholder {
+  color: white;
+  font-size: 1.2em;
+  font-style: italic;
+}
+
 .MainContent {
   flex: 1 0 0;
   overflow: hidden;
