--- a/src/styles/qualtrics.css
+++ b/src/styles/qualtrics.css
@@ -202,12 +202,12 @@ a.reset {
 .card2 {
   background-color: #fff;
   padding: 20px;
-  overflow: hidden;
-  transition: 0.3s linear;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
 
   &:hover {
-    background-color: #edf2f4;
-    transition: color .7s ease,background-color .5s ease;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
 }
