--- a/src/styles/qualtrics.css
+++ b/src/styles/qualtrics.css
@@ -201,6 +201,7 @@ a.reset {
 
 .card2 {
   background-color: #fff;
+  margin-bottom: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -212,5 +213,8 @@ a.reset {
 
 }
 
-
+.scrollBox {
+  overflow-y: scroll !important;
+  max-height: 80vh !important; 
+}
 
